Solution for test skipping too much lines
Submitting this as a PR to see if it works (or please try it yourself if you may)

--- a/lib/languages/red.txt
+++ b/lib/languages/red.txt
@@ -1,8 +1,8 @@
 !e
 ;\p
-Red [\p-->>]\pj
-Red +[\p-->>]\pj
-comment [\p-->>]\pj
-comment +[\p-->>]\pj
-comment {\p-->>}\pj
-comment +{\p-->>}\pj
+Red [\pj-->>]\pj
+Red +[\pj-->>]\pj
+comment [\pj-->>]\pj
+comment +[\pj-->>]\pj
+comment {\pj-->>}\pj
+comment +{\pj-->>}\pj
